fix: Elements were overlapping and/or not displayed completely
UI elements were overlapping each other and/or were not being correctly displayed in different display sizes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ h4,
 h5,
 h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 0;
 }
 
 article,
@@ -66,7 +66,8 @@ section {
 
 #main-content {
   background-color: #f3f3f3;
-  min-height: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #footer {
@@ -83,7 +84,7 @@ section {
 
 nav {
   width: 100%;
-  height: 80px;
+  padding: 30px 0;
   background-color: #252831;
   text-align: center;
 }
@@ -92,12 +93,13 @@ nav h1 {
   margin: auto;
 }
 
-nav h1 a {
+nav a {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+  vertical-align: middle;
 }
 
 #breadcrumb {
@@ -106,7 +108,6 @@ nav h1 a {
   background-color: #eee;
   font-size: 17px;
   margin: 0;
-  width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -149,7 +150,6 @@ nav h1 a {
 
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -159,7 +159,7 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  padding: 10px 0 0 20px;
 }
 
 .filter-options select {
@@ -182,6 +182,8 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #restaurants-list li {
@@ -236,19 +238,18 @@ nav h1 a {
 /* ====================== Restaurant Details ====================== */
 
 .inside header {
-  position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
 }
 
+#map-container {
+  width: 100%;
+}
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 200px;
 }
 
 .inside #map {
@@ -257,21 +258,17 @@ nav h1 a {
   width: 100%;
 }
 
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
-
 #restaurant-name {
   color: #f18200;
   font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 15px 0;
   text-transform: uppercase;
   line-height: 1.1;
+  width: 100%;
+  text-align: center;
 }
 
 #restaurant-img {
@@ -298,19 +295,13 @@ nav h1 a {
 
 #restaurant-container,
 #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
-}
-
-#reviews-container {
-  padding: 30px 40px 80px;
+  width: calc(50% - 20px);
+  padding: 10px;
 }
 
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  font-size: 20pt;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
@@ -339,4 +330,11 @@ nav h1 a {
 
 #restaurant-hours td {
   color: #666;
+}
+
+@media screen and (max-width: 700px) {
+  #restaurant-container,
+  #reviews-container {
+    width: 100%;
+  }
 }
